Fix big screen footer spacing. 5c187ee6f1a78efa1e6a9fa34ee8125929d55f2d

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -774,6 +774,12 @@ body {
 	}
 }
 
+@media (min-height: 64em) and (min-width: 110.75em) {
+	body {
+		--footer--spacing: var(--section--spacing);
+	}
+}
+
 body {
 	--color: white;
 	--color--background: var(--color--accent);
